# serializer version: 1
# name: test_permission_transform[dict_group]
  list([
    dict({
      'groups': list([
        dict({
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': Permissions(cancel_job=False, create_ref=False, create_sample=True, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
          'users': list([
          ]),
        }),
      ]),
      'id': 5,
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
    dict({
      'groups': list([
        'bf1b993c',
      ]),
      'id': 2,
      'permissions': dict({
        'cancel_job': False,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
  ])
# ---
# name: test_permission_transform[postgres_priority]
  list([
    dict({
      'groups': list([
        dict({
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': Permissions(cancel_job=True, create_ref=False, create_sample=True, modify_hmm=False, modify_subtraction=False, remove_file=False, remove_job=False, upload_file=False),
          'users': list([
          ]),
        }),
      ]),
      'id': 5,
      'permissions': dict({
        'cancel_job': True,
        'create_ref': False,
        'create_sample': True,
        'modify_hmm': False,
        'modify_subtraction': False,
        'remove_file': False,
        'remove_job': False,
        'upload_file': False,
      }),
    }),
  ])
# ---
